// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DriverCode contains the actualLanguage URL if is auto 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 0.5rem;
}

.c3 {
  width: 20px;
  opacity: 0.7;
  margin-right: 0.3rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.9rem;
}

.c1:hover {
  color: #EB7422;
}

.c1:hover .c2 {
  opacity: 1;
}

<div
  className="c0"
>
  <a
    className="c1"
    href="Python.driver"
    target="_blank"
  >
    <img
      alt="Driver code repository on GitHub"
      className="c2 c3"
      src="github.svg"
      title="Driver code repository on GitHub"
    />
  </a>
</div>
`;

exports[`DriverCode contains the driver URL if selectedLanguage is not auto 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 0.5rem;
}

.c3 {
  width: 20px;
  opacity: 0.7;
  margin-right: 0.3rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.9rem;
}

.c1:hover {
  color: #EB7422;
}

.c1:hover .c2 {
  opacity: 1;
}

<div
  className="c0"
>
  <a
    className="c1"
    href="Java.driver"
    target="_blank"
  >
    <img
      alt="Driver code repository on GitHub"
      className="c2 c3"
      src="github.svg"
      title="Driver code repository on GitHub"
    />
  </a>
</div>
`;

exports[`Header has the button disabled if canParse is false 1`] = `
.c13 {
  padding: 0.5em 0.5em;
  border: 1px solid #B1B1B1;
  border-radius: 3px;
  cursor: pointer;
  background: #B1B1B1;
  color: #212121;
  font-weight: bold;
  text-transform: uppercase;
  font-size: 0.8rem;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  -webkit-transition: box-shadow 300ms ease-in-out;
  transition: box-shadow 300ms ease-in-out;
  border: none;
}

.c13[disabled] {
  opacity: 0.6;
  pointer-events: none;
}

.c13:hover {
  box-shadow: 0 5px 15px rgba(138,128,115,0.8);
}

.c13 + .c13 {
  margin-left: 0.7rem;
}

.c0 {
  height: 70px;
  padding: 0 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #f9f7f5;
  border-bottom: 1px solid #dad7d0;
  z-index: 9999;
  box-shadow: 0 5px 25px rgba(138,128,115,0.14);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  font-weight: normal;
  padding: 0;
  margin: 0;
  height: 100%;
  border-right: 1px solid #dad7d0;
  padding-right: 1rem;
}

.c2 {
  height: 40px;
}

.c3 {
  margin-left: 0.8rem;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 1rem;
  height: 100%;
}

.c6 {
  color: grey;
  margin-right: 1em;
  font-size: 0.8rem;
  font-weight: bold;
  text-transform: uppercase;
  color: #636262;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  border-right: 1px solid #dad7d0;
  padding-right: 1rem;
}

.c5 + .c5 {
  margin-left: 1rem;
}

.c5:last-child {
  border-right: none;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  border-right: 1px solid #dad7d0;
  padding-right: 1rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  padding-right: 0;
}

.c14 + .c14 {
  margin-left: 1rem;
}

.c14:last-child {
  border-right: none;
}

.c7 {
  border-radius: 3px;
  border: 1px solid #dad7d0;
  background: white;
  padding: 0.5em 0.5em;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 0.8rem;
  font-size: .7rem;
  text-transform: uppercase;
}

.c7 + button {
  margin-left: 3px;
}

.c12 {
  border-radius: 3px;
  border: 1px solid #dad7d0;
  background: white;
  padding: 0.5em 0.5em;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 0.8rem;
  text-transform: none;
}

.c12 + button {
  margin-left: 3px;
}

.c15 {
  padding: 0.5em 0.5em;
  border: 1px solid #B1B1B1;
  border-radius: 3px;
  cursor: pointer;
  background: #B1B1B1;
  color: #212121;
  font-weight: bold;
  text-transform: uppercase;
  font-size: 0.8rem;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  -webkit-transition: box-shadow 300ms ease-in-out;
  transition: box-shadow 300ms ease-in-out;
  padding: .7rem 1.8rem;
  background: #EB7422;
  color: #FFFFFF;
  white-space: nowrap;
}

.c15[disabled] {
  opacity: 0.6;
  pointer-events: none;
}

.c15:hover {
  box-shadow: 0 5px 15px rgba(138,128,115,0.8);
}

.c15:hover {
  box-shadow: 0 5px 15px rgba(191,76,50,0.48);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 0.5rem;
}

.c11 {
  width: 20px;
  opacity: 0.7;
  margin-right: 0.3rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.9rem;
}

.c9:hover {
  color: #EB7422;
}

.c9:hover .c10 {
  opacity: 1;
}

<header
  className="c0"
>
  <h1
    className="c1"
  >
    <img
      alt="bblfsh"
      className="c2"
      src="babelfish_logo.svg"
    />
    <span
      className="c3"
    >
      Dashboard
    </span>
  </h1>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <label
        className="c6"
        htmlFor="language-selector"
      >
        Language
      </label>
      <select
        className="c7"
        id="language-selector"
        onChange={[Function]}
        value=""
      >
        <option
          value=""
        >
          auto (Python)
        </option>
        <option
          value="python"
        >
          Python
        </option>
        <option
          value="java"
        >
          Java
        </option>
      </select>
      <div
        className="c8"
      >
        <a
          className="c9"
          href="Python.driver"
          target="_blank"
        >
          <img
            alt="Driver code repository on GitHub"
            className="c10 c11"
            src="github.svg"
            title="Driver code repository on GitHub"
          />
        </a>
      </div>
    </div>
    <div
      className="c5"
    >
      <label
        className="c6"
        htmlFor="examples-selector"
      >
        Examples
      </label>
      <select
        className="c7"
        id="examples-selector"
        onChange={[Function]}
        value={undefined}
      >
        <option
          value=""
        >
          ---
        </option>
        <option
          value="python"
        />
        <option
          value="java"
        />
      </select>
    </div>
    <div
      className="c5"
    >
      <input
        className="c12"
        onChange={[Function]}
        placeholder="raw gist url"
        type="url"
        value={undefined}
      />
      <button
        className="c13"
        disabled={true}
        onClick={undefined}
      >
        load
      </button>
      <button
        className="c13"
        disabled={true}
        onClick={[Function]}
      >
        share
      </button>
    </div>
    <div
      className="c14"
    >
      <button
        className="c15"
        disabled={true}
        id="run-parser"
        onClick={undefined}
      >
        Run parser
      </button>
    </div>
  </div>
</header>
`;

exports[`Header has the button enabled if canParse is true 1`] = `
.c13 {
  padding: 0.5em 0.5em;
  border: 1px solid #B1B1B1;
  border-radius: 3px;
  cursor: pointer;
  background: #B1B1B1;
  color: #212121;
  font-weight: bold;
  text-transform: uppercase;
  font-size: 0.8rem;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  -webkit-transition: box-shadow 300ms ease-in-out;
  transition: box-shadow 300ms ease-in-out;
  border: none;
}

.c13[disabled] {
  opacity: 0.6;
  pointer-events: none;
}

.c13:hover {
  box-shadow: 0 5px 15px rgba(138,128,115,0.8);
}

.c13 + .c13 {
  margin-left: 0.7rem;
}

.c0 {
  height: 70px;
  padding: 0 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #f9f7f5;
  border-bottom: 1px solid #dad7d0;
  z-index: 9999;
  box-shadow: 0 5px 25px rgba(138,128,115,0.14);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  font-weight: normal;
  padding: 0;
  margin: 0;
  height: 100%;
  border-right: 1px solid #dad7d0;
  padding-right: 1rem;
}

.c2 {
  height: 40px;
}

.c3 {
  margin-left: 0.8rem;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 1rem;
  height: 100%;
}

.c6 {
  color: grey;
  margin-right: 1em;
  font-size: 0.8rem;
  font-weight: bold;
  text-transform: uppercase;
  color: #636262;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  border-right: 1px solid #dad7d0;
  padding-right: 1rem;
}

.c5 + .c5 {
  margin-left: 1rem;
}

.c5:last-child {
  border-right: none;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  border-right: 1px solid #dad7d0;
  padding-right: 1rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  padding-right: 0;
}

.c14 + .c14 {
  margin-left: 1rem;
}

.c14:last-child {
  border-right: none;
}

.c7 {
  border-radius: 3px;
  border: 1px solid #dad7d0;
  background: white;
  padding: 0.5em 0.5em;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 0.8rem;
  font-size: .7rem;
  text-transform: uppercase;
}

.c7 + button {
  margin-left: 3px;
}

.c12 {
  border-radius: 3px;
  border: 1px solid #dad7d0;
  background: white;
  padding: 0.5em 0.5em;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 0.8rem;
  text-transform: none;
}

.c12 + button {
  margin-left: 3px;
}

.c15 {
  padding: 0.5em 0.5em;
  border: 1px solid #B1B1B1;
  border-radius: 3px;
  cursor: pointer;
  background: #B1B1B1;
  color: #212121;
  font-weight: bold;
  text-transform: uppercase;
  font-size: 0.8rem;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  -webkit-transition: box-shadow 300ms ease-in-out;
  transition: box-shadow 300ms ease-in-out;
  padding: .7rem 1.8rem;
  background: #EB7422;
  color: #FFFFFF;
  white-space: nowrap;
}

.c15[disabled] {
  opacity: 0.6;
  pointer-events: none;
}

.c15:hover {
  box-shadow: 0 5px 15px rgba(138,128,115,0.8);
}

.c15:hover {
  box-shadow: 0 5px 15px rgba(191,76,50,0.48);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 0.5rem;
}

.c11 {
  width: 20px;
  opacity: 0.7;
  margin-right: 0.3rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.9rem;
}

.c9:hover {
  color: #EB7422;
}

.c9:hover .c10 {
  opacity: 1;
}

<header
  className="c0"
>
  <h1
    className="c1"
  >
    <img
      alt="bblfsh"
      className="c2"
      src="babelfish_logo.svg"
    />
    <span
      className="c3"
    >
      Dashboard
    </span>
  </h1>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <label
        className="c6"
        htmlFor="language-selector"
      >
        Language
      </label>
      <select
        className="c7"
        id="language-selector"
        onChange={[Function]}
        value=""
      >
        <option
          value=""
        >
          auto (Python)
        </option>
        <option
          value="python"
        >
          Python
        </option>
        <option
          value="java"
        >
          Java
        </option>
      </select>
      <div
        className="c8"
      >
        <a
          className="c9"
          href="Python.driver"
          target="_blank"
        >
          <img
            alt="Driver code repository on GitHub"
            className="c10 c11"
            src="github.svg"
            title="Driver code repository on GitHub"
          />
        </a>
      </div>
    </div>
    <div
      className="c5"
    >
      <label
        className="c6"
        htmlFor="examples-selector"
      >
        Examples
      </label>
      <select
        className="c7"
        id="examples-selector"
        onChange={[Function]}
        value={undefined}
      >
        <option
          value=""
        >
          ---
        </option>
        <option
          value="python"
        />
        <option
          value="java"
        />
      </select>
    </div>
    <div
      className="c5"
    >
      <input
        className="c12"
        onChange={[Function]}
        placeholder="raw gist url"
        type="url"
        value={undefined}
      />
      <button
        className="c13"
        disabled={true}
        onClick={undefined}
      >
        load
      </button>
      <button
        className="c13"
        disabled={true}
        onClick={[Function]}
      >
        share
      </button>
    </div>
    <div
      className="c14"
    >
      <button
        className="c15"
        disabled={false}
        id="run-parser"
        onClick={undefined}
      >
        Run parser
      </button>
    </div>
  </div>
</header>
`;

exports[`Header renders correctly 1`] = `
.c13 {
  padding: 0.5em 0.5em;
  border: 1px solid #B1B1B1;
  border-radius: 3px;
  cursor: pointer;
  background: #B1B1B1;
  color: #212121;
  font-weight: bold;
  text-transform: uppercase;
  font-size: 0.8rem;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  -webkit-transition: box-shadow 300ms ease-in-out;
  transition: box-shadow 300ms ease-in-out;
  border: none;
}

.c13[disabled] {
  opacity: 0.6;
  pointer-events: none;
}

.c13:hover {
  box-shadow: 0 5px 15px rgba(138,128,115,0.8);
}

.c13 + .c13 {
  margin-left: 0.7rem;
}

.c0 {
  height: 70px;
  padding: 0 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #f9f7f5;
  border-bottom: 1px solid #dad7d0;
  z-index: 9999;
  box-shadow: 0 5px 25px rgba(138,128,115,0.14);
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.5rem;
  font-weight: normal;
  padding: 0;
  margin: 0;
  height: 100%;
  border-right: 1px solid #dad7d0;
  padding-right: 1rem;
}

.c2 {
  height: 40px;
}

.c3 {
  margin-left: 0.8rem;
}

.c4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: 1rem;
  height: 100%;
}

.c6 {
  color: grey;
  margin-right: 1em;
  font-size: 0.8rem;
  font-weight: bold;
  text-transform: uppercase;
  color: #636262;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  border-right: 1px solid #dad7d0;
  padding-right: 1rem;
}

.c5 + .c5 {
  margin-left: 1rem;
}

.c5:last-child {
  border-right: none;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  border-right: 1px solid #dad7d0;
  padding-right: 1rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  padding-right: 0;
}

.c14 + .c14 {
  margin-left: 1rem;
}

.c14:last-child {
  border-right: none;
}

.c7 {
  border-radius: 3px;
  border: 1px solid #dad7d0;
  background: white;
  padding: 0.5em 0.5em;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 0.8rem;
  font-size: .7rem;
  text-transform: uppercase;
}

.c7 + button {
  margin-left: 3px;
}

.c12 {
  border-radius: 3px;
  border: 1px solid #dad7d0;
  background: white;
  padding: 0.5em 0.5em;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 0.8rem;
  text-transform: none;
}

.c12 + button {
  margin-left: 3px;
}

.c15 {
  padding: 0.5em 0.5em;
  border: 1px solid #B1B1B1;
  border-radius: 3px;
  cursor: pointer;
  background: #B1B1B1;
  color: #212121;
  font-weight: bold;
  text-transform: uppercase;
  font-size: 0.8rem;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  -webkit-transition: box-shadow 300ms ease-in-out;
  transition: box-shadow 300ms ease-in-out;
  padding: .7rem 1.8rem;
  background: #EB7422;
  color: #FFFFFF;
  white-space: nowrap;
}

.c15[disabled] {
  opacity: 0.6;
  pointer-events: none;
}

.c15:hover {
  box-shadow: 0 5px 15px rgba(138,128,115,0.8);
}

.c15:hover {
  box-shadow: 0 5px 15px rgba(191,76,50,0.48);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 0.5rem;
}

.c11 {
  width: 20px;
  opacity: 0.7;
  margin-right: 0.3rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: black;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.9rem;
}

.c9:hover {
  color: #EB7422;
}

.c9:hover .c10 {
  opacity: 1;
}

<header
  className="c0"
>
  <h1
    className="c1"
  >
    <img
      alt="bblfsh"
      className="c2"
      src="babelfish_logo.svg"
    />
    <span
      className="c3"
    >
      Dashboard
    </span>
  </h1>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <label
        className="c6"
        htmlFor="language-selector"
      >
        Language
      </label>
      <select
        className="c7"
        id="language-selector"
        onChange={[Function]}
        value=""
      >
        <option
          value=""
        >
          auto (Java)
        </option>
        <option
          value="python"
        >
          Python
        </option>
        <option
          value="java"
        >
          Java
        </option>
      </select>
      <div
        className="c8"
      >
        <a
          className="c9"
          href="Java.driver"
          target="_blank"
        >
          <img
            alt="Driver code repository on GitHub"
            className="c10 c11"
            src="github.svg"
            title="Driver code repository on GitHub"
          />
        </a>
      </div>
    </div>
    <div
      className="c5"
    >
      <label
        className="c6"
        htmlFor="examples-selector"
      >
        Examples
      </label>
      <select
        className="c7"
        id="examples-selector"
        onChange={[Function]}
        value={undefined}
      >
        <option
          value=""
        >
          ---
        </option>
        <option
          value="python"
        />
        <option
          value="java"
        />
      </select>
    </div>
    <div
      className="c5"
    >
      <input
        className="c12"
        onChange={[Function]}
        placeholder="raw gist url"
        type="url"
        value={undefined}
      />
      <button
        className="c13"
        disabled={true}
        onClick={undefined}
      >
        load
      </button>
      <button
        className="c13"
        disabled={true}
        onClick={[Function]}
      >
        share
      </button>
    </div>
    <div
      className="c14"
    >
      <button
        className="c15"
        disabled={true}
        id="run-parser"
        onClick={undefined}
      >
        Run parser
      </button>
    </div>
  </div>
</header>
`;
